--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"run": "node ."
 	},
-	"author": "Esoteric Organisation",
+	"author": "Esoteric Foundation",
 	"contributors": ["Esoteric Enderman", "rolyPolyVole"],
 	"license": "MIT",
 	"dependencies": {
